Fixed overflow issue

--- a/app-front/src/app/main/experience/experience.component.sass
+++ b/app-front/src/app/main/experience/experience.component.sass
@@ -46,7 +46,11 @@
       padding-right: 20px
 
 @media screen and (max-width: $screen-xs-max)
+  .exp-experience-dates
+    text-align: left !important
   .exp-info
+    h3
+      margin-top: 5px
     h5
       margin-left: 0
       margin-right: 0
